[tool.poetry]
name = "trf"
version = "0.1.0"
description = ""
authors = ["Gregorio Honorato <greghono@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytesseract = "^0.3.10"
opencv-python = "^4.8.0.76"
selenium = "^4.11.2"
webdriver-manager = "^4.0.0"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
