[tool.poetry]
name = "trf"
version = "0.1.0"
description = ""
authors = ["Gregorio Honorato <greghono@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytesseract = "^0.3.10"
opencv-python = "^4.8.0.76"
selenium = "^4.11.2"
webdriver-manager = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
taskipy = "^1.12.0"
blue = "^0.9.1"
ruff = "^0.0.285"
isort = "^5.12.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.2.3"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 79
exclude = ['.venv', '.vscode']

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
pythonpath = "."

[tool.taskipy.tasks]
lint = 'ruff . && blue --check . --diff'
format = 'blue .  && isort .'
pre_test = 'task lint'
test = 'pytest -s -x --cov=trf -vv'
post_test = 'coverage html'
clean_pyc = 'find . -type d -name __pycache__ -exec rm -r {} \+'